k8s/fastapi-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
  namespace: microdemo
spec:
  selector:
    app: fastapi-svc
  ports:
    - name: http
      port: 80
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-svc
  namespace: microdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-svc
  template:
    metadata:
      labels:
        app: fastapi-svc
    spec:
      containers:
        - name: fastapi
          image: fastapi-svc:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
